--- a/Rider/src/app/home/home.page.html
+++ b/Rider/src/app/home/home.page.html
@@ -64,7 +64,7 @@
 
 <ion-content scroll-y="false">
 
-  <capacitor-google-maps #map style="width: 100%; height: 100%;">
+  <capacitor-google-maps #map class="map">
 
   </capacitor-google-maps>
 
@@ -162,9 +162,11 @@
                   {{settingsService.currencySymbol}}{{getDiscountedPriceRange().max.toFixed(0)}}
                 </h2>
                 <p class="original-price" *ngIf="sharedRideEnabled">
-                  <del>{{settingsService.currencySymbol}}{{price}}</del></p>
+                  <del>{{settingsService.currencySymbol}}{{price}}</del>
+                </p>
                 <p class="original-price" *ngIf="!sharedRideEnabled">
-                  <del>{{settingsService.currencySymbol}}{{price*2}}</del></p>
+                  <del>{{settingsService.currencySymbol}}{{price*2}}</del>
+                </p>
               </div>
             </div>
           </div>
