--- a/Rider/src/app/home/home.page.scss
+++ b/Rider/src/app/home/home.page.scss
@@ -66,6 +66,11 @@ ion-content {
   --padding-bottom: 0;
   position: relative;
   --background: transparent;
+  pointer-events: none; // Allow touches to pass through to native map
+
+  &>* {
+    pointer-events: auto; // Re-enable for UI elements
+  }
 }
 
 ion-footer {
@@ -171,7 +176,7 @@ ion-footer {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 0;
 }
 
 // Modern Card Styling for Selection Bar
