--- a/Admin/src/theme/variables.scss
+++ b/Admin/src/theme/variables.scss
@@ -112,6 +112,11 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
+  --ion-background-color: #ffffff;
+  --ion-background-color-rgb: 255, 255, 255;
+  --ion-text-color: #000000;
+  --ion-text-color-rgb: 0, 0, 0;
+
   // Add these new custom variables for text colors
   --ion-text-color: #333333;
   --ion-text-color-rgb: 51, 51, 51;
@@ -213,12 +218,6 @@
 
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18, 18, 18;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255, 255, 255;
-
-    --ion-border-color: #222222;
-
     --ion-color-step-50: #1e1e1e;
     --ion-color-step-100: #2a2a2a;
     --ion-color-step-150: #363636;
