--- a/Rider/src/app/otp/otp.component.scss
+++ b/Rider/src/app/otp/otp.component.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: #ffffff;
+  --background: var(--ion-background-color);
 }
 
 ion-list {
@@ -31,9 +31,9 @@ ion-item {
     height: 40px !important;
     font-size: 20px !important;
     font-weight: 600 !important;
-    background-color: #ffffff !important;
-    color: #333333 !important;
-    border: 1px solid #cccccc !important;
+    background-color: var(--ion-color-light) !important;
+    color: var(--ion-text-color) !important;
+    border: 1px solid var(--ion-color-step-300) !important;
     border-radius: 8px !important;
     margin: 0 4px;
 
@@ -73,7 +73,7 @@ ion-button {
 
 ion-footer {
   background: transparent;
-  
+
   ion-button {
     margin: 0;
     height: auto;
