--- a/Rider/src/app/pages/profile/profile.page.html
+++ b/Rider/src/app/pages/profile/profile.page.html
@@ -48,6 +48,17 @@
       </ion-item>
     </form>
 
+    <ion-list lines="none" class="ion-margin-top">
+      <ion-item (click)="nav.navigateForward('promotion')" detail="true">
+        <ion-icon name="gift" color="primary" slot="start"></ion-icon>
+        <ion-label>{{ 'MENU.PROMOTION' | translate }}</ion-label>
+      </ion-item>
+      <ion-item (click)="nav.navigateForward('about')" detail="true">
+        <ion-icon name="information-circle" color="primary" slot="start"></ion-icon>
+        <ion-label>{{ 'MENU.ABOUT' | translate }}</ion-label>
+      </ion-item>
+    </ion-list>
+
     <ion-label color="primary" class="ion-text-center ion-padding-top">
       <p>{{ 'RECEIPT_EMAIL_NOTE' | translate }}</p>
     </ion-label>
@@ -65,10 +76,10 @@
     </ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button (click)="changeLanguage('en')" color="light" size="small">
-            <ion-text>EN</ion-text>
+        <ion-text>EN</ion-text>
       </ion-fab-button>
       <ion-fab-button (click)="changeLanguage('ms')" color="light" size="small">
-            <ion-text>MS</ion-text>
+        <ion-text>MS</ion-text>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
