--- a/Driver/src/app/otp/otp.component.html
+++ b/Driver/src/app/otp/otp.component.html
@@ -13,65 +13,49 @@
 </ion-header>
 
 <ion-content class="ion-no-border modern-content">
-  <ion-list lines="none" class="ion-padding">
-    <ion-item class="ion-margin otp-container" lines="none">
-      <ion-label>
-        <div class="ion-padding-top ion-padding-bottom" align="center">
-          <ng-otp-input #otpInput
-            (onInputChange)="onOtpChange($event)"
-            [config]="{
+  <div class="form-container">
+    <ion-card class="otp-card modern-card">
+      <ion-card-content class="card-content">
+        <div class="otp-input-wrapper">
+          <ng-otp-input #otpInput (onInputChange)="onOtpChange($event)" [config]="{
               length: 6,
               inputStyles: {
                 'width': '40px',
-                'height': '40px',
-                'font-size': '20px',
-                'font-weight': '500',
+                'height': '46px',
+                'font-size': '22px',
+                'font-weight': '600',
                 'background-color': 'var(--ion-color-light)',
                 'color': 'var(--ion-color-dark)',
-                'border': 'none',
-                'border-radius': '12px'
+                'border': '2px solid transparent',
+                'border-radius': '12px',
+                'margin': '0 4px',
+                'transition': 'all 0.3s ease'
               }
             }">
           </ng-otp-input>
         </div>
-      </ion-label>
-    </ion-item>
 
-    <ion-item class="ion-margin timer-container" lines="none">
-      <ion-label>
-        <div class="ion-padding-top ion-padding-bottom" align="center">
+        <div class="timer-section">
+          <ion-icon name="time-outline" color="medium"></ion-icon>
           <span class="countdown">{{ countdown }} {{ 'OTP.SECONDS_REMAINING' | translate }}</span>
         </div>
-      </ion-label>
-    </ion-item>
+      </ion-card-content>
+    </ion-card>
 
     <div class="button-container">
-      <ion-button 
-        class="resend-button"
-        shape="round" 
-        fill="outline" 
-        size="large" 
-        expand="block" 
-        color="primary" 
-        (click)="resend()"
-        [disabled]="countdown > 0">
+      <ion-button class="submit-btn" shape="round" size="large" expand="block" [disabled]="!otp || otp.length !== 6"
+        color="primary" (click)="verifyOtp()">
+        <ng-container *ngIf="!approve2">
+          <span>{{ 'OTP.CONTINUE' | translate }}</span>
+          <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+        </ng-container>
+        <ion-spinner *ngIf="approve2" name="crescent"></ion-spinner>
+      </ion-button>
+
+      <ion-button class="resend-btn" shape="round" fill="clear" size="default" expand="block" color="primary"
+        (click)="resend()" [disabled]="countdown > 0">
         {{ 'OTP.RESEND' | translate }}
       </ion-button>
-      
-      <ion-button 
-        class="submit-button"
-        shape="round" 
-        size="large" 
-        expand="block"
-        [disabled]="!otp || otp.length !== 6" 
-        color="primary" 
-        (click)="verifyOtp()">
-        <ng-container *ngIf="!approve2">
-          {{ 'OTP.CONTINUE' | translate }}
-          <ion-icon color="light" slot="end" name="arrow-forward"></ion-icon>
-        </ng-container>
-        <ion-progress-bar *ngIf="approve2" color="light" type="indeterminate"></ion-progress-bar>
-      </ion-button>
     </div>
-  </ion-list>
+  </div>
 </ion-content>
